--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
                 </div>
   
                 <div class="button">
-                  <a href="..\site\pag\veneza.html" class="button-link">
+                  <a href="..\oficina3-capacita-brasil\pag\veneza.html" class="button-link">
                     <button class="saberMais"> Saber mais!</button>
                   </a>
                 </div>
@@ -72,7 +72,7 @@
                 </div>
   
                 <div class="button">
-                  <a href="..\site\pag\londres.html" class="button-link">
+                  <a href="..\oficina3-capacita-brasil\pag\londres.html" class="button-link">
                     <button class="saberMais"> Saber mais!</button>
                   </a>
                 </div>
@@ -92,7 +92,7 @@
                 </div>
   
                 <div class="button">
-                  <a href="..\site\pag\santorini.html" class="button-link">
+                  <a href="..\oficina3-capacita-brasil\pag\santorini.html" class="button-link">
                     <button class="saberMais"> Saber mais!</button>
                   </a>
                 </div>
